--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -10,6 +10,8 @@
 body {
   width: 100%;
   height: 100vh;
+  margin: 0;
+  /* overflow: hidden; */
 }
 
 .container1 {
@@ -17,8 +19,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  min-height: 100vh;
   padding: 20px 100px;
 }
 
